--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
 
     <!-- Kitties -->
-
     <img src="images/kitty-5.png" alt="Kitty 5">
-
+  
+    <div>
     <img class="kitty-1" src="images/kitty-1.png" alt="Kitty 1">
+    </div>
 
+    <div>
     <img id="kitty-2" src="images/kitty-2.png" alt="Kitty 2">
+    </div>
 
     <div id="basket">
       <img src="images/kitty-3.png" alt="kitty 3">
